tests/integration/per_document_grammar/validation/_views/01_view_references_nonexisting_grammar_element/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: View element 'BOGUS_VIEW' references a nonexisting grammar element 'BOGUS_OBJECT'.
CHECK: Location: {{.*}}input.sdoc:6:1
CHECK: Hint: Make sure each View element you create references an existing object in the grammar or the default REQUIREMENT object.
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
